<resources>
    <string name="app_name">learneasy-itvarsity</string>
    <string name="title_activity_nav_drawer">NavDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_profile"> Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_custom">Custom</string>
    <string name="menu_catalogue">Catalogue</string>

    <string name="locus_rationale_title">Rationale Title</string>
    <string name="locus_rationale_message">This is a rationale message.</string>
    <string name="locus_permission_blocked_title">Permission Blocked Title</string>
    <string name="locus_permission_blocked_message">This is a permission blocked message.</string>
    <string name="locus_location_resolution_title">Permission Resolution Title</string>
    <string name="locus_location_resolution_message">This is a permission resolution message.</string>
    <string name="grant">Grant</string>
    <string name="deny">Deny</string>

</resources>